Correção do erro no método java.nio.file.Files.readString; método substituído pelo Files.readAllBytes